force-app/main/default/objects/SVMXC__Service_Offerings__c/SVMXC__Service_Offerings__c.object-meta.xml
<CustomObject>
    <description>Offering price for services</description>
    <label>Service Offering</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Offerings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>