force-app/main/default/objects/SVMXC__Service_Offerings__c/fields/SVMXC__Available_Services__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Available_Services__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Type</label>
    <referenceTo>SVMXC__Service__c</referenceTo>
    <relationshipLabel>Service Offerings</relationshipLabel>
    <relationshipName>Service_Offerings</relationshipName>
    <type>Lookup</type>
</CustomField>