force-app/main/default/objects/SVMXC__Service_Offerings__c/fields/SVMXC__Labor_Discount_Not_Covered__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Labor_Discount_Not_Covered__c</fullName>
    <label>Labor Discount - Not Covered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>